# RTSoft

./: README.md  Отчёт по летней практике.doc
docker/: Dockerfile
linux/driver/: .Module.symvers.cmd  .modules.order.cmd  .test.ko.cmd  .test.mod.cmd  .test.mod.o.cmd  .test.o.cmd  Read.me  a.out  main.c  main.cpp  modules.order  test.ko  test.mod.c
linux/udev/: expansion-usb.rules  expansion-usb.sh
road_line_detector/: README.md  main.py
task1/: setup.sh
task2/: modules.order  test.c  test.ko  test.mod  test.mod.c
task3/: Dockerfile  setup.sh
task4/: Dockerfile  cmake_install.cmake  main  main.cpp
task4/doc/: Makefile  main.cpp
task5/: CMakeCache.txt  Dockerfile  Makefile  cmake_install.cmake  main  main.cpp
task5/doc/: CMakeLists.txt  main.cpp
task6/: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  cmake_install.cmake  main  main.cpp  yolo_opencv.py
task6/doc/: CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  start.sh
task6/gmock/: gmock-actions.h  gmock.h
task6/gmock/internal/: gmock-internal-utils.h  gmock-port.h
task6/gtest/: gtest-death-test.h  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-test-part.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h
task6/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-type-util.h
task6/struct_mapping-master/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
task6/struct_mapping-master/example/: Makefile  cmake_install.cmake
task6/struct_mapping-master/test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
task7/: Dockerfile
